--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "private": true,
   "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
     "@types/enzyme": "^2.8.0",
     "@types/jest": "^19.2.3",
     "@types/node": "^7.0.18",
@@ -17,12 +23,8 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
     "enzyme": "^2.8.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0"
-  },
-  "devDependencies": {
+    "jest": "^20.0.0",
+    "jest-enzyme": "^3.1.0",
     "react-scripts-ts": "1.3.0"
   },
   "scripts": {
