--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "devDependencies": {
     "@types/enzyme": "^2.8.0",
-    "@types/jest": "^19.2.3",
+    "@types/jest": "^18.1.0",
     "@types/node": "^7.0.18",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
     "enzyme": "^2.8.2",
-    "jest-enzyme": "^3.1.0",
-    "react-scripts-ts": "1.3.0"
+    "jest-enzyme": "^2.1.2",
+    "react-scripts-ts": "1.3.0",
+    "react-test-renderer": "^15.5.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
