--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
+    "coveralls": "^2.13.1",
     "enzyme": "^2.8.2",
     "jest-enzyme": "^2.1.2",
     "react-scripts-ts": "1.3.0",
