--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "coveralls": "^2.13.1",
     "enzyme": "^2.8.2",
     "jest-enzyme": "^2.1.2",
-    "react-scripts-ts": "1.3.0",
+    "react-scripts-ts": "^1.4.0",
     "react-test-renderer": "^15.5.4"
   },
   "scripts": {
