--- a/package.json
+++ b/package.json
@@ -23,42 +23,42 @@
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
-    "coveralls": "^2.13.1",
-    "enzyme": "^2.8.2",
-    "jest-enzyme": "^2.1.2",
-    "react-test-renderer": "^15.5.4",
     "app-root-path": "^2.0.1",
     "autoprefixer": "6.7.2",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "cli-highlight": "1.1.4",
     "connect-history-api-fallback": "1.3.0",
+    "coveralls": "^2.13.1",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
-    "detect-port": "1.1.0",
+    "detect-port": "^1.1.2",
     "dotenv": "2.0.0",
+    "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.10.0",
+    "file-loader": "^0.11.1",
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.3",
+    "http-proxy-middleware": "^0.17.4",
     "jest": "18.1.0",
+    "jest-enzyme": "^2.1.2",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "react-test-renderer": "^15.5.4",
     "style-loader": "0.13.1",
     "ts-loader": "^1.3.1",
     "tslint": "^4.0.2",
     "tslint-loader": "^3.3.0",
     "tslint-react": "^2.0.0",
     "typescript": "^2.3.2",
-    "url-loader": "0.5.7",
+    "url-loader": "^0.5.8",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
