Upgrade outdated jest-related packages.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^2.8.0",
-    "@types/jest": "^18.1.0",
+    "@types/jest": "^19.2.3",
     "@types/node": "^7.0.21",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
@@ -40,8 +40,8 @@
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "^0.17.4",
-    "jest": "18.1.0",
-    "jest-enzyme": "^2.1.2",
+    "jest": "^19.0.2",
+    "jest-enzyme": "^3.1.1",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
