--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^0.11.1",
-    "fs-extra": "0.30.0",
+    "fs-extra": "^3.0.1",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "^0.17.4",
     "jest": "^19.0.2",
