--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "cli-highlight": "1.1.4",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "^2.13.1",
-    "cross-spawn": "4.0.2",
+    "cross-spawn": "^5.1.0",
     "css-loader": "0.26.1",
     "detect-port": "^1.1.2",
-    "dotenv": "2.0.0",
+    "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^0.11.1",
