--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "detect-port": "^1.1.2",
     "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "2.24.0",
@@ -56,7 +56,7 @@
     "typescript": "^2.3.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "1.16.2",
+    "webpack-dev-server": "^2.4.5",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "^2.0.3"
   },
