--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
     "app-root-path": "^2.0.1",
-    "autoprefixer": "6.7.2",
+    "autoprefixer": "^7.1.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "cli-highlight": "1.1.4",
