--- a/package.json
+++ b/package.json
@@ -25,30 +25,30 @@
     "@types/react-redux": "^4.4.40",
     "app-root-path": "^2.0.1",
     "autoprefixer": "^7.1.1",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
+    "case-sensitive-paths-webpack-plugin": "^2.0.0",
     "chalk": "1.1.3",
     "cli-highlight": "1.1.4",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "^2.13.1",
     "cross-spawn": "^5.1.0",
-    "css-loader": "0.26.1",
+    "css-loader": "^0.28.1",
     "detect-port": "^1.1.2",
     "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "fs-extra": "^3.0.1",
-    "html-webpack-plugin": "2.24.0",
+    "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "jest": "^19.0.2",
     "jest-enzyme": "^3.1.1",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
-    "postcss-loader": "1.2.2",
+    "postcss-loader": "^2.0.5",
     "promise": "7.1.1",
     "react-dev-utils": "^1.0.1",
     "react-test-renderer": "^15.5.4",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.17.0",
     "ts-loader": "^2.0.3",
     "tslint": "^5.2.0",
     "tslint-loader": "^3.3.0",
