--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "toggl-api": "^1.0.1"
   },
   "devDependencies": {
     "@types/enzyme": "^2.8.0",
