Ignore *.test.ts and *.test.tsx files when compiling the application outside of test mode.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ],
   "types": [
     "typePatches"
