--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "toggl-api": "^1.0.1"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "react-dev-utils": "^1.0.1",
     "react-error-overlay": "^1.0.1",
     "react-test-renderer": "^15.5.4",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
     "ts-loader": "^2.0.3",
