--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-error-overlay": "^1.0.1",
     "react-test-renderer": "^15.5.4",
     "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.2.3",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
     "ts-loader": "^2.0.3",
