--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "enzyme": "^2.8.2",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "2.1.0",
+    "faker": "^4.1.0",
     "file-loader": "0.11.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
