Exclude typescript .d.ts definition files and node_modules folder from Jest coverage search path.

--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}"
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.d.ts",
+      "!**/node_modules/**"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
