--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
+    "@types/redux-mock-store": "^0.0.7",
     "app-root-path": "^2.0.1",
     "autoprefixer": "7.1.0",
     "babel-core": "6.24.1",
