Exclude registerServiceWorker.ts from test coverage as it's a caching setup file for production and it's not especially important for testing.

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
       "src/**/*.{ts,tsx}",
       "!src/**/*.d.ts",
       "!**/__{mocks,tests}__/*.{ts,tsx}",
+      "!src/registerServiceWorker.ts",
       "!**/node_modules/**"
     ],
     "setupFiles": [
