--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
+    "react-timekeeper": "^1.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "toggl-api": "^1.0.1"
@@ -26,6 +28,7 @@
     "@types/faker": "^4.1.0",
     "@types/jest": "^19.2.3",
     "@types/lodash": "^4.14.64",
+    "@types/moment": "^2.13.0",
     "@types/node": "^7.0.21",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
