Add WIP code to whitelist the app for CORS with the Toggl API. Note that this CORS whitelisting has been temporarily disabled as of 2017/07/25 pending an overhaul in the CORS whitelisting system for the next Toggl version.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/redux-localstorage": "^1.0.2",
     "@types/redux-localstorage-filter": "^0.1.1",
     "@types/redux-mock-store": "^0.0.7",
+    "@types/whatwg-fetch": "^0.0.33",
     "app-root-path": "^2.0.1",
     "autoprefixer": "7.1.0",
     "babel-core": "6.24.1",
