--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "popper.js": "^1.12.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
@@ -39,7 +40,7 @@
     "@types/redux-localstorage-filter": "^0.1.1",
     "@types/redux-mock-store": "^0.0.7",
     "app-root-path": "^2.0.1",
-    "autoprefixer": "7.1.0",
+    "autoprefixer": "^7.1.3",
     "babel-core": "6.24.1",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
@@ -62,15 +63,18 @@
     "inquirer": "3.0.6",
     "jest": "20.0.3",
     "jest-enzyme": "^3.1.1",
+    "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
-    "postcss-loader": "2.0.5",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "promise": "7.1.1",
     "react-dev-utils": "^1.0.1",
     "react-error-overlay": "^1.0.1",
     "react-test-renderer": "^15.5.4",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
     "ts-loader": "^2.0.3",
