--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
+    "react-select": "^1.1.0",
     "react-timekeeper": "^1.0.4",
     "redux": "^3.6.0",
     "redux-localstorage": "^1.0.0-rc4",
