Upgrade enzyme and react to latest versions.

--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "private": true,
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "popper.js": "^1.12.5",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "raf": "^3.4.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.5",
     "react-select": "^1.1.0",
     "react-timekeeper": "^1.0.4",
@@ -28,13 +30,13 @@
     "toggl-api": "^1.0.1"
   },
   "devDependencies": {
-    "@types/enzyme": "^2.8.0",
+    "@types/enzyme": "^3.1.6",
     "@types/faker": "^4.1.0",
     "@types/jest": "^19.2.3",
     "@types/lodash": "^4.14.64",
-    "@types/node": "^7.0.21",
-    "@types/react": "^15.0.24",
-    "@types/react-dom": "^15.5.0",
+    "@types/node": "^8.5.2",
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^4.4.40",
     "@types/redux-localstorage": "^1.0.2",
     "@types/redux-localstorage-filter": "^0.1.1",
@@ -53,7 +55,8 @@
     "cross-spawn": "4.0.2",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
-    "enzyme": "^2.8.2",
+    "enzyme": "^3.1.6",
+    "enzyme-adapter-react-16": "^1.1.1",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "2.1.0",
     "faker": "^4.1.0",
@@ -62,7 +65,7 @@
     "html-webpack-plugin": "2.28.0",
     "inquirer": "3.0.6",
     "jest": "20.0.3",
-    "jest-enzyme": "^3.1.1",
+    "jest-enzyme": "^4.0.1",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
@@ -71,7 +74,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^1.0.1",
     "react-error-overlay": "^1.0.1",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^16.2.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
     "sass-loader": "^6.0.6",
