--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.6",
     "@types/faker": "^4.1.0",
-    "@types/jest": "^19.2.3",
+    "@types/jest": "^21.1.9",
     "@types/lodash": "^4.14.64",
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.31",
@@ -43,11 +43,11 @@
     "@types/redux-mock-store": "^0.0.7",
     "app-root-path": "^2.0.1",
     "autoprefixer": "^7.1.3",
-    "babel-core": "6.24.1",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.0.0",
+    "babel-core": "6.26.0",
+    "babel-jest": "^22.0.4",
+    "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.0.0",
-    "babel-runtime": "6.23.0",
+    "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -64,7 +64,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "inquirer": "3.0.6",
-    "jest": "20.0.3",
+    "jest": "^22.0.4",
     "jest-enzyme": "^4.0.1",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
