--- a/package.json
+++ b/package.json
@@ -48,46 +48,46 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "^2.13.1",
-    "css-loader": "0.28.1",
+    "css-loader": "^0.28.7",
     "dotenv": "4.0.0",
     "enzyme": "^3.1.6",
     "enzyme-adapter-react-16": "^1.1.1",
     "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
-    "file-loader": "0.11.1",
+    "file-loader": "^1.1.6",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.28.0",
+    "html-webpack-plugin": "^2.30.1",
     "inquirer": "3.0.6",
     "jest": "^22.0.4",
     "jest-enzyme": "^4.0.1",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.0.0",
+    "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "promise": "7.1.1",
-    "react-dev-utils": "^1.0.1",
-    "react-error-overlay": "^1.0.1",
+    "react-dev-utils": "^4.2.1",
+    "react-error-overlay": "^3.0.0",
     "react-test-renderer": "^16.2.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "0.17.0",
-    "sw-precache-webpack-plugin": "0.9.1",
-    "ts-loader": "^2.0.3",
+    "style-loader": "^0.19.1",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "ts-loader": "^3.2.0",
     "tslint": "^5.2.0",
     "tslint-loader": "^3.3.0",
     "tslint-react": "^3.0.0",
     "typescript": "^2.3.2",
-    "url-loader": "0.5.8",
-    "webpack": "2.5.1",
-    "webpack-dev-server": "2.4.5",
-    "webpack-manifest-plugin": "1.1.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-manifest-plugin": "^1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
