--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "coveralls": "^2.13.1",
+    "chalk": "^2.3.0",
+    "connect-history-api-fallback": "^1.5.0",
+    "coveralls": "^3.0.0",
     "css-loader": "^0.28.7",
     "dotenv": "4.0.0",
     "enzyme": "^3.1.6",
@@ -60,9 +60,9 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "file-loader": "^1.1.6",
-    "fs-extra": "3.0.1",
+    "fs-extra": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
-    "inquirer": "3.0.6",
+    "inquirer": "^4.0.1",
     "jest": "^22.0.4",
     "jest-enzyme": "^4.0.1",
     "node-sass": "^4.5.3",
@@ -70,7 +70,7 @@
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
-    "promise": "7.1.1",
+    "promise": "^8.0.1",
     "react-dev-utils": "^4.2.1",
     "react-error-overlay": "^3.0.0",
     "react-test-renderer": "^16.2.0",
