Upgrade react-dev-utils and react-error-overlay packages to latest to address build error.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
@@ -71,8 +71,8 @@
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "promise": "^8.0.1",
-    "react-dev-utils": "^4.2.1",
-    "react-error-overlay": "^3.0.0",
+    "react-dev-utils": "^5.0.0",
+    "react-error-overlay": "^4.0.0",
     "react-test-renderer": "^16.2.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.2.3",
